--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
 			var __jmol = 'jsmol-14.6.1_2016.07.11';
 		</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script type="text/javascript" src="<?php echo "jsmol-14.6.1_2016.07.11/JSmol.min.nojq.js"; ?>"></script>
-		<script type="text/javascript" src="<?php echo "jsmol-14.6.1_2016.07.11/js/JSmolThree.js"; ?>"></script>
-		<script type="text/javascript" src="<?php echo "jsmol-14.6.1_2016.07.11/js/JSmolGLmol.js"; ?>"></script>
+		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/JSmol.min.nojq.js"></script>
+		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/js/JSmolThree.js"></script>
+		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/js/JSmolGLmol.js"></script>
 
+		<script type="text/javascript" src="stdlib.js"></script>
 		<script type="text/javascript" src="viewed.js"></script>
 		<script type="text/javascript" src="legend.js"></script>
 		<script type="text/javascript" src="legend_mini.js"></script>
 		<script type="text/javascript" src="jml.js"></script>
-		<script type="text/javascript" src="results.js"></script>
+		<script type="text/javascript" src="index.js"></script>
 	</head>
 
 	<body>
 
 		<div class="ui-state-default" id="draggable" style="position:absolute;left:10%;z-index:9999;"></div>
-		<div id='jmlfun' style='height:800px;width:800px;background-color:red'></div>
+		<div id='jmlfun' style='height:500px;width:500px;background-color:red'></div>
 
 	</body>
 </html>
