Should load one pdb

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<script type="text/javascript">
-			var __jmol = 'jsmol-14.6.1_2016.07.11';
-		</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+		
 		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/JSmol.min.nojq.js"></script>
 		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/js/JSmolThree.js"></script>
 		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/js/JSmolGLmol.js"></script>
@@ -20,7 +21,6 @@
 		<script type="text/javascript" src="stdlib.js"></script>
 		<script type="text/javascript" src="viewed.js"></script>
 		<script type="text/javascript" src="legend.js"></script>
-		<script type="text/javascript" src="legend_mini.js"></script>
 		<script type="text/javascript" src="jml.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</head>
