Added superclick drop-down menu functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+		<link rel="stylesheet" href="superclick/dist/css/superfish.css" media="screen">
+		<script src="superclick/dist/js/superclick.js"></script>
+
 		
 		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/JSmol.min.nojq.js"></script>
 		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/js/JSmolThree.js"></script>
