Towards streamlined interface

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<script type="text/javascript" src="stdlib.js"></script>
 		<script type="text/javascript" src="viewed.js"></script>
-		<script type="text/javascript" src="legend.js"></script>
+		<script type="text/javascript" src="jmolmenu.js"></script>
 		<script type="text/javascript" src="jml.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</head>
@@ -32,7 +32,7 @@
 	<body>
 
 		<div class="ui-state-default" id="draggable" style="position:absolute;left:10%;z-index:9999;"></div>
-		<div id='jmlfun' style='height:500px;width:500px;background-color:red'></div>
+		<div id='jmlfun' style='height:500px;width:500px;background-color:#eee'></div>
 
 	</body>
 </html>
