Added buttons to load examples

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
 		<link rel="stylesheet" href="superclick/dist/css/superfish.css" media="screen">
 		<script src="superclick/dist/js/superclick.js"></script>
 
@@ -27,6 +31,7 @@
 		<script type="text/javascript" src="jmolmenu.js"></script>
 		<script type="text/javascript" src="jml.js"></script>
 		<script type="text/javascript" src="index.js"></script>
+
 	</head>
 
 	<body>
@@ -34,5 +39,17 @@
 		<div class="ui-state-default" id="draggable" style="position:absolute;left:10%;z-index:9999;"></div>
 		<div id='jmlfun' style='height:500px;width:500px;background-color:#eee'></div>
 
+		<div class="container">
+			<p></p>
+			<button type="button" class="btn btn-primary">Protein</button>
+			<button type="button" class="btn btn-success">Compound</button>
+			<button type="button" class="btn btn-info">Ions</button>
+			<button type="button" class="btn btn-warning">Water</button>
+<!--
+			<button type="button" class="btn btn-danger">Danger</button>
+			<button type="button" class="btn btn-link">Link</button>
+-->
+		</div>
+	
 	</body>
 </html>
