--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 	<body>
 
-		<div class="ui-state-default" id="draggable" style="left:10%;z-index:9999;"></div>
-		<div class="ui-state-default" id="info-to-users" style="left:20px;top:200px;width:460px;z-index:9999;">
+		<div class="ui-state-default" id="draggable" style="position:absolute;left:10%;z-index:9999;"></div>
+		<div class="ui-state-default" id="info-to-users" style="position:absolute;left:20px;top:200px;width:460px;z-index:9999;">
 			Click buttons below to load molecules!
 		</div>
 		<div id='jmlfun' style='height:500px;width:500px;background-color:#eee'></div>
