--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/js/JSmolThree.js"></script>
 		<script type="text/javascript" src="jsmol-14.6.1_2016.07.11/js/JSmolGLmol.js"></script>
 
-		<script type="text/javascript" src="viewed.js"></script>
 		<script type="text/javascript" src="jmolmenu.js"></script>
-		<script type="text/javascript" src="jml.js"></script>
+		<script type="text/javascript" src="jmolwrapper.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 
 	</head>
